Tue Nov 18 09:20:29 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* version.c: Change version number to 1.9.21.

	* Version 1.9.20.

Mon Nov 17 14:35:31 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* server.c (server_updated): If scratched_file and noexec are set,
	clean up so we don't get a "duplicate Scratch_Entry" warning
	later.
	* sanity.sh: New tests conflicts3-10 to conflicts3-13, for this.

	* sanity.sh (conflicts3): Don't allow "file1 was lost" messages
	here; I don't think CVS actually produced them, and they don't
	belong.

Sun Nov 16 23:19:41 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh: Accept either "U file1" or "P file1".

Fri Nov 14 12:32:05 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* rcs.c: Add comment about cleaning up ,foo, file on ^C.

Fri Nov 14 11:56:29 1997  Andy Piper <andyp@parallax.co.uk>
	and Jim Kingdon  <kingdon@harvey.cyclic.com>

	* filesubr.c (unlink_file_dir): Don't print trace message in the
	server.

Fri Nov 14 11:28:55 1997  Jim Meyering and Jim Kingdon

	* rcs.c (RCS_getdatebranch): If the branch we are looking for
	doesn't exist, return a revision which matches the date, not
	just NULL.
	* sanity.sh (tagdate): New test, for this.

Thu Nov 13 10:11:48 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (basicb-21): Fix comment which described a behavior
	which no longer exists.

Wed Nov 12 16:24:45 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	Clean up infrastructure made unnecessary by RCS library:
	* rcscmds.c (diff_exec, diff_execv): Use literal "diff" not DIFF.
	* options.h.in (DIFF), rcs.h (RCS, RCS_CI, RCS_DIFF,
	RCS_RCSMERGE): Removed; no longer used.
	* commit.c (commit), patch.c (patch_fileproc),
	rcscmds.c (RCS_exec_rcsdiff), start of rcscmds.c: Update comments
	to reflect librarification of RCS.
	* options.h.in (RCSBIN_DFLT): Removed.
	* main.c, cvs.h (Rcsbin, free_Rcsbin): Removed.
	* main.c (main): Don't check RCSBIN environment variable.  -b
	global option is now a noop.